fix overflow

--- a/src/Styles/Skills.css
+++ b/src/Styles/Skills.css
@@ -201,11 +201,11 @@
     }
     #clickable{
       opacity: 1;
-       animation: clickableWave 3000ms ease-in-out infinite;
+       /* animation: clickableWave 3000ms ease-in-out infinite; */
       
     }
 
-    @keyframes clickableWave {
+    /* @keyframes clickableWave {
 
      
         0%, 100% {
@@ -219,7 +219,7 @@
         }
    
       
-    }
+    } */
 
 
     
